adjust return search, details product